# SimpleCompactString

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  Readme.md  compile_flags.txt
.github/: pull_request_template.md
.github/workflows/: pull-request.yml
examples/: CMakeLists.txt
examples/basic_usage/: CMakeLists.txt  httpserver.c  hugestring.c  main.c  protectviolation.c  simplestring.c
include/scs/: arrayhelper.h  scs.h
source/scs/: arrayhelper.c  scs.c  scs_iterator.c
test/: CMakeLists.txt  iterator.cpp  scstest-unit.cpp
